<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.arctosoft.vault.MainActivity">

    <item
        android:id="@+id/lock"
        android:icon="@drawable/ic_outline_lock_24"
        android:title="@string/menu_lock_vault"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/order_by"
        android:icon="@drawable/round_sort_24"
        android:title="@string/menu_order_by"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/order_by_newest_first"
                android:title="@string/menu_order_by_newest_first" />
            <item
                android:id="@+id/order_by_oldest_first"
                android:title="@string/menu_order_by_oldest_first" />
            <item
                android:id="@+id/order_by_largest_first"
                android:title="@string/menu_order_by_largest_first" />
            <item
                android:id="@+id/order_by_smallest_first"
                android:title="@string/menu_order_by_smallest_first" />
            <item
                android:id="@+id/order_by_random"
                android:title="@string/menu_order_by_random" />
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>